--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ods-api",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "This is an simple api to acces data provided by the \"Online Dienst für Studierende\" a platform used by the Fachhochschule Dortmund",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,9 @@
   "author": "Florian Völker <Neirolf2030@web.de>",
   "repository": "github:feirell/ods-api",
   "license": "MIT",
-  "files": [],
+  "files": [
+    "index.d.ts"
+  ],
   "dependencies": {
     "iso-8859-15": "^1.0.0"
   },
