--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gen-doc": "npm run insert-examples && typedoc --mode modules --entryPoint \"\\\"index\\\"\" --out docs src/index.ts",
+    "gen-doc": "npm run insert-examples && typedoc --mode modules --entryPoint \"\\\"index\\\"\" --out docs src/index.ts && echo \"\" >> docs/.nojekyll",
     "insert-examples": "node example/insert-examples.js README.md",
     "build": "tsc"
   },
